Adds ddl.auto = create-drop

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ security.user.password=bar
 spring.data.rest.base-path=/rest/
 
 #DDML
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
