Adds thymeleaf support and some partials and assets

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.springframework.session:spring-session')
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	runtime('com.h2database:h2')
 	runtime('org.postgresql:postgresql')
 	compileOnly('org.projectlombok:lombok')
