--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse-wtp'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'jacoco'
+
 
 jar {
 	baseName = 'target-pillowing-bank'
@@ -29,6 +31,8 @@ repositories {
 configurations {
 	providedRuntime
 }
+
+test { finalizedBy jacocoTestReport }
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
