--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,5 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 
 # End of https://www.gitignore.io/api/intellij,gradle,java
+
+src/main/resources/application.properties
