Adds spring security test. More unit tests for UserServiceImpl. Improved duplicate checking for UserServiceImpl

--- a/build.gradle
+++ b/build.gradle
@@ -46,4 +46,6 @@ dependencies {
 	compileOnly('org.projectlombok:lombok')
 	providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile('org.springframework.security:spring-security-test:4.2.1.RELEASE')
+
 }
